fix overflow of playlist buttons

--- a/assets/css/_media.css
+++ b/assets/css/_media.css
@@ -115,6 +115,7 @@
   &__link {
     display: block;
     padding: .5rem;
+    overflow: hidden;
     background-color: #000;
     color: #fff;
     font-size: 1.1rem;
